# django-ddd-caching

./: .gitignore  README.md  mypy.ini  pyproject.toml
api/: apollo_reports_pb2.py  extensions.py  schema.py  urls.py  views.py
campaigns/: admin.py  factories.py  models.py
campaigns/domain/: converters.py  entities.py  repositories.py
campaigns/domain/repositories/: brand.py  campaign.py  event.py
campaigns/management/commands/: seed.py
campaigns/migrations/: 0001_initial.py  0002_auto_20201119_2225.py
demo/: settings.py  urls.py
domain/: converter.py  entities.py
domain/repositories/: cache.py  redis.py  stats.py
