[tool.poetry]
authors = ["Patrick Arminio <patrick.arminio@gmail.com>"]
description = ""
license = "MIT"
name = "poc-caching-ddd-graphql"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^3.1.3"
Werkzeug = "^2.2.3"
aioredis = "^1.3.1"
dacite = "^1.5.1"
django-cors-headers = "^3.5.0"
django-extensions = "^3.0.9"
factory-boy = "^3.1.0"
protobuf = "^3.13.0"
python = "^3.9"
strawberry-graphql = "^0.45.3"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"
mypy = "^0.800"
pdbpp = "^0.10.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
